k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - host: "sonarr.molloy.cloud"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sonarr
              port:
                number: 8989
  - host: "plex.molloy.cloud"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: plex
              port:
                number: 32400
  - host: "jackett.molloy.cloud"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: jackett
              port:
                number: 9117
  - host: "deluge.molloy.cloud"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: deluge
              port:
                number: 8112
  - host: "radarr.molloy.cloud"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: radarr
              port:
                number: 7878
